# BiggerBotChess

./: .gitignore  CMakeLists.txt  README.md  build.sh  out.lol
docs/: architecture.md
examples/: CMakeLists.txt  simple_game.cpp
include/board/: board.h  piece.h
include/core/: engine.h
include/evaluation/: evaluator.h
include/move/: move.h  move_generator.h
include/search/: search.h
include/utils/: utils.h
scripts/: lol.py  train.py
src/: BiggerBotChess  BiggerBotChess_feat  BiggerBotChess_static  BiggerBotChess_v1  CMakeLists.txt  Makefile  bitboard.cpp  bitboard.h  board.cpp  board.h  eval.cpp  eval.h  main.cpp  move.h  movegenerator.cpp  movegenerator.h  search.cpp  search.h  test.cpp  test.h  timemanager.h  tt.cpp  tt.h  types.h  uci.cpp  uci.h
src/board/: board.cpp  piece.cpp
src/core/: engine.cpp
src/evaluation/: evaluator.cpp
src/move/: move.cpp  move_generator.cpp
src/search/: search.cpp
src/utils/: utils.cpp
tests/: CMakeLists.txt  test_board.cpp  test_main.cpp  test_move.cpp  test_utils.cpp
weights/: data.txt
